tempo/tempo-ingester.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: ingester
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  name: tempo-ingester
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ingester
      app.kubernetes.io/instance: tempo
      app.kubernetes.io/name: tempo
  serviceName: ingester
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ingester
        app.kubernetes.io/instance: tempo
        app.kubernetes.io/name: tempo
        tempo-gossip-member: "true"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: ingester
                  app.kubernetes.io/instance: tempo
                  app.kubernetes.io/name: tempo
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: ingester
                app.kubernetes.io/instance: tempo
                app.kubernetes.io/name: tempo
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - -target=ingester
        - -config.file=/conf/tempo.yaml
        - -mem-ballast-size-mbs=1024
        image: docker.io/grafana/tempo:1.0.0
        imagePullPolicy: IfNotPresent
        name: ingester
        ports:
        - containerPort: 9095
          name: grpc
          protocol: TCP
        - containerPort: 7946
          name: http-memberlist
          protocol: TCP
        - containerPort: 3100
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /conf
          name: tempo-conf
        - mountPath: /var/tempo
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: tempo
      serviceAccountName: tempo
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: tempo
        name: tempo-conf
      - emptyDir: {}
        name: data
  updateStrategy:
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ingester
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  name: tempo-ingester
spec:
  ports:
  - name: http
    port: 3100
    protocol: TCP
    targetPort: 3100
  - name: grpc
    port: 9095
    protocol: TCP
    targetPort: 9095
  selector:
    app.kubernetes.io/component: ingester
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: tempo-gossip-ring
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  name: tempo-gossip-ring
spec:
  ports:
  - name: gossip-ring
    port: 7946
    protocol: TCP
    targetPort: http-memberlist
  selector:
    tempo-gossip-member: "true"
  sessionAffinity: None
  type: ClusterIP
