tempo/tempo-query-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  name: tempo-query-frontend
spec:
  minReadySeconds: 10
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: query-frontend
      app.kubernetes.io/instance: tempo
      app.kubernetes.io/name: tempo
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: query-frontend
        app.kubernetes.io/instance: tempo
        app.kubernetes.io/name: tempo
        tempo-gossip-member: "true"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: query-frontend
                  app.kubernetes.io/instance: tempo
                  app.kubernetes.io/name: tempo
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: query-frontend
                app.kubernetes.io/instance: tempo
                app.kubernetes.io/name: tempo
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - -target=query-frontend
        - -config.file=/conf/tempo.yaml
        - -mem-ballast-size-mbs=1024
        image: docker.io/grafana/tempo:1.0.0
        imagePullPolicy: IfNotPresent
        name: query-frontend
        ports:
        - containerPort: 3100
          name: http
          protocol: TCP
        - containerPort: 9095
          name: grpc
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /conf
          name: tempo-conf
      - args:
        - --query.base-path=/
        - --grpc-storage-plugin.configuration-file=/conf/tempo-query.yaml
        - --query.bearer-token-propagation=true
        image: docker.io/grafana/tempo-query:1.0.0
        imagePullPolicy: IfNotPresent
        name: tempo-query
        ports:
        - containerPort: 16686
          name: jaeger-ui
          protocol: TCP
        - containerPort: 16687
          name: jaeger-metrics
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /conf
          name: tempo-conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: tempo
      serviceAccountName: tempo
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: tempo
        name: tempo-conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: query-frontend
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  name: tempo-query-frontend
spec:
  ports:
  - name: http
    port: 3100
    protocol: TCP
    targetPort: 3100
  - name: grpc
    port: 9095
    protocol: TCP
    targetPort: 9095
  - name: tempo-query-jaeger-ui
    port: 16686
    protocol: TCP
    targetPort: 16686
  - name: tempo-query-metrics
    port: 16687
    protocol: TCP
    targetPort: jaeger-metrics
  selector:
    app.kubernetes.io/component: query-frontend
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: query-frontend
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  name: tempo-query-frontend-discovery

spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: http
    port: 3100
    protocol: TCP
    targetPort: 3100
  - name: grpc
    port: 9095
    protocol: TCP
    targetPort: 9095
  - name: tempo-query-jaeger-ui
    port: 16686
    protocol: TCP
    targetPort: 16686
  - name: tempo-query-metrics
    port: 16687
    protocol: TCP
    targetPort: jaeger-metrics
  selector:
    app.kubernetes.io/component: query-frontend
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/name: tempo
  sessionAffinity: None
  type: ClusterIP
