tempo/tempo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tempo.172.31.14.138.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo-distributor
                port:
                  number: 3100
